# Test-Assignment

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  powerteam.cpp  powerteam.h  thing.cpp  thing.h
html/: annotated.html  classPowerTeam-members.html  classPowerTeam.html  classes.html  classthing-members.html  classthing.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  main_8cpp.html  main_8cpp__incl.dot  main_8cpp__incl.md5  powerteam_8cpp.html  powerteam_8cpp__incl.dot  powerteam_8cpp__incl.md5  powerteam_8h.html  powerteam_8h__dep__incl.dot  powerteam_8h__dep__incl.md5  powerteam_8h_source.html  thing_8cpp.html  thing_8cpp__incl.dot  thing_8cpp__incl.md5  thing_8h.html  thing_8h__dep__incl.dot  thing_8h__dep__incl.md5  thing_8h_source.html
html/search/: all_2.js  all_3.js  all_4.js  classes_0.js  classes_1.js  files_1.js  files_2.js  functions_0.js  functions_2.js  functions_4.js  searchdata.js
include/: powerteam.h
latex/: annotated.tex  classPowerTeam.tex  classthing.tex  files.tex  main_8cpp.tex  main_8cpp.tex.tmp  main_8cpp__incl.dot  main_8cpp__incl.md5  powerteam_8cpp.tex  powerteam_8cpp__incl.dot  powerteam_8cpp__incl.md5  powerteam_8h.tex  powerteam_8h__dep__incl.dot  powerteam_8h__dep__incl.md5  refman.tex  thing_8cpp.tex  thing_8cpp__incl.dot  thing_8cpp__incl.md5  thing_8h.tex  thing_8h__dep__incl.dot  thing_8h__dep__incl.md5
src/: main.cpp  powerteam.cpp
